edited fpacket,changed classes.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,8 +22,12 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/HSM-1.jar
@@ -31,16 +35,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-8.4.1.jre14.jar=C:\\Users\\Haider\\Desktop\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre14.jar
+file.reference.mssql-jdbc-8.4.1.jre14.jar-1=C:\\Program Files\\JDBC Driver\\sqljdbc_8.4\\enu\\mssql-jdbc-8.4.1.jre14.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre14.jar}
+    ${file.reference.mssql-jdbc-8.4.1.jre14.jar}:\
+    ${file.reference.mssql-jdbc-8.4.1.jre14.jar-1}:\
+    ${libs.JavaFX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -48,6 +56,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -63,10 +73,6 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
-javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -107,9 +113,13 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
