Revert "added appointment class and new queries"

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -162,9 +162,9 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
+    ${javafx.classpath.extension}:\
     ${file.reference.mssql-jdbc-8.4.1.jre14.jar}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.JavaFX.classpath}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -191,6 +191,10 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
+javafx.classpath.extension=\
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
