--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,27 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="dist/HSM-1.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mssql-jdbc-8.4.1.jre14.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mysql-connector-java-5.1.49-bin.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx.base.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx.controls.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx.fxml.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15/lib/javafx.graphics.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/javafx-sdk-15"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/sqljdbc_8.4/enu/mssql-jdbc-8.4.1.jre14.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
